@@ -905,7 +905,7 @@ sub add_block($$$$$)
       {
       if ($LabelType != BL_TYPE_NONE)
 	{
-	$label->{TYPE} = $LabelType;
+	$label->{TYPE} = $LabelType if ($label->{TYPE} != BL_TYPE_JLABEL);
 	$labels_by_address{$Address} = $label;
 	$max_label_addr = $Address if ($max_label_addr < $Address);
 	}
@@ -1783,9 +1783,9 @@ sub reg_name($$)
       printf STDERR ("This address (0x%02X) belongs to two names: \"$str\" and \"$var\"\n", $Address);
       }
     }
-  elsif (defined($sfr_by_address{$Address}))
+  elsif (defined($ram = $sfr_by_address{$Address}) && $ram->{NAME} ne '')
     {
-    $str = $sfr_by_address{$Address}->{NAME};
+    $str = $ram->{NAME};
     ${$StrRef} = $str;
     }
   elsif (defined($ram = $ram_names_by_address{$Address}))
@@ -6079,6 +6079,14 @@ if ($header_file ne '')
   $embed_level = 0;
   read_header("$include_path/$header_file");
   }
+else
+  {
+  $embed_level = 0;
+  foreach (grep(! /^\s*$|^\s*#/o, <DATA>))
+    {
+    process_header_line($_);
+    }
+  }
 
 if ($map_file eq '')
   {
@@ -6116,3 +6124,123 @@ find_lost_labels_in_code() if ($find_lost_labels);
 add_names_labels();
 disassembler();
 print_hidden_labels() if ($verbose > 2);
+
+__END__
+################################################################################
+#
+# These the SFR-s and SBIT-s of the i8052 MCU.
+#
+
+__sfr __at (0x80) P0;
+__sfr __at (0x81) SP;
+__sfr __at (0x82) DPL;
+__sfr __at (0x83) DPH;
+__sfr __at (0x87) PCON;
+__sfr __at (0x88) TCON;
+__sfr __at (0x89) TMOD;
+__sfr __at (0x8A) TL0;
+__sfr __at (0x8B) TL1;
+__sfr __at (0x8C) TH0;
+__sfr __at (0x8D) TH1;
+__sfr __at (0x90) P1;
+__sfr __at (0x98) SCON;
+__sfr __at (0x99) SBUF;
+__sfr __at (0xA0) P2;
+__sfr __at (0xA8) IE;
+__sfr __at (0xB0) P3;
+__sfr __at (0xB8) IP;
+__sfr __at (0xC8) T2CON;
+__sfr __at (0xCA) RCAP2L;
+__sfr __at (0xCB) RCAP2H;
+__sfr __at (0xCC) TL2;
+__sfr __at (0xCD) TH2;
+__sfr __at (0xD0) PSW;
+__sfr __at (0xE0) ACC;
+__sfr __at (0xF0) B;
+
+__sbit __at (0x80) P0_0;
+__sbit __at (0x81) P0_1;
+__sbit __at (0x82) P0_2;
+__sbit __at (0x83) P0_3;
+__sbit __at (0x84) P0_4;
+__sbit __at (0x85) P0_5;
+__sbit __at (0x86) P0_6;
+__sbit __at (0x87) P0_7;
+
+__sbit __at (0x88) IT0;
+__sbit __at (0x89) IE0;
+__sbit __at (0x8A) IT1;
+__sbit __at (0x8B) IE1;
+__sbit __at (0x8C) TR0;
+__sbit __at (0x8D) TF0;
+__sbit __at (0x8E) TR1;
+__sbit __at (0x8F) TF1;
+
+__sbit __at (0x90) P1_0;
+__sbit __at (0x91) P1_1;
+__sbit __at (0x92) P1_2;
+__sbit __at (0x93) P1_3;
+__sbit __at (0x94) P1_4;
+__sbit __at (0x95) P1_5;
+__sbit __at (0x96) P1_6;
+__sbit __at (0x97) P1_7;
+
+__sbit __at (0x98) RI;
+__sbit __at (0x99) TI;
+__sbit __at (0x9A) RB8;
+__sbit __at (0x9B) TB8;
+__sbit __at (0x9C) REN;
+__sbit __at (0x9D) SM2;
+__sbit __at (0x9E) SM1;
+__sbit __at (0x9F) SM0;
+
+__sbit __at (0xA0) P2_0;
+__sbit __at (0xA1) P2_1;
+__sbit __at (0xA2) P2_2;
+__sbit __at (0xA3) P2_3;
+__sbit __at (0xA4) P2_4;
+__sbit __at (0xA5) P2_5;
+__sbit __at (0xA6) P2_6;
+__sbit __at (0xA7) P2_7;
+
+__sbit __at (0xA8) EX0;
+__sbit __at (0xA9) ET0;
+__sbit __at (0xAA) EX1;
+__sbit __at (0xAB) ET1;
+__sbit __at (0xAC) ES;
+__sbit __at (0xAD) ET2;
+__sbit __at (0xAF) EA;
+
+__sbit __at (0xB0) RXD;
+__sbit __at (0xB1) TXD;
+__sbit __at (0xB2) INT0;
+__sbit __at (0xB3) INT1;
+__sbit __at (0xB4) T0;
+__sbit __at (0xB5) T1;
+__sbit __at (0xB6) WR;
+__sbit __at (0xB7) RD;
+
+__sbit __at (0xB8) PX0;
+__sbit __at (0xB9) PT0;
+__sbit __at (0xBA) PX1;
+__sbit __at (0xBB) PT1;
+__sbit __at (0xBC) PS;
+__sbit __at (0xBD) PT2;
+
+__sbit __at (0xC8) CP_RL2;
+__sbit __at (0xC9) C_T2;
+__sbit __at (0xCA) TR2;
+__sbit __at (0xCB) EXEN2;
+__sbit __at (0xCC) TCLK;
+__sbit __at (0xCD) RCLK;
+__sbit __at (0xCE) EXF2;
+__sbit __at (0xCF) TF2;
+
+__sbit __at (0xD0) P;
+__sbit __at (0xD1) F1;
+__sbit __at (0xD2) OV;
+__sbit __at (0xD3) RS0;
+__sbit __at (0xD4) RS1;
+__sbit __at (0xD5) F0;
+__sbit __at (0xD6) AC;
+__sbit __at (0xD7) CY;
